Enhance LLM API support and update configuration. Added Anthropic protocol support in .env.example and LLMClient. Updated dependencies in pyproject.toml and requirements.txt. Improved README for clarity and streamlined TUI components.

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,23 @@
-# LLM API 配置 (OpenAI 兼容格式)
-# 默认使用 Moonshot Kimi，支持切换到其他服务
+# LLM API Configuration (supports OpenAI / Anthropic protocols)
 
-# API Key
-OPENAI_API_KEY=your_api_key_here
+# Protocol type: openai (standard OpenAI protocol) | anthropic (Claude protocol)
+# anthropic protocol is used by some third-party services or local models
+LLM_PROTOCOL=openai
 
-# Base URL (默认 Kimi，可改为 OpenAI 或其他)
-# OPENAI_BASE_URL=https://api.moonshot.cn/v1
-# OPENAI_BASE_URL=https://api.openai.com/v1
+# API Key - fill in your API key
+LLM_API_KEY=your_api_key_here
 
-# 模型名称 (默认 kimi-k2-5)
-# OPENAI_MODEL=kimi-k2-5
-# OPENAI_MODEL=gpt-4
-# OPENAI_MODEL=gpt-3.5-turbo
+# Base URL - API service address, please refer to your provider's documentation
+# Examples:
+#   OpenAI: https://api.openai.com/v1
+#   OpenAI-compatible: https://api.example.com/v1
+LLM_BASE_URL=https://api.openai.com/v1
+
+# Model name - fill according to your provider
+# Examples: gpt-4, gpt-3.5-turbo, kimi-k2-5, claude-3-opus-20240229
+LLM_MODEL=gpt-4
+
+# Other configuration examples:
+# LLM_PROTOCOL=anthropic
+# LLM_BASE_URL=https://api.example.com/coding
+# LLM_MODEL=example-coding/model
