Refactor SelfMe TUI to Rich CLI. Updated entry points and removed deprecated TUI components. Added new chat input handling and UI enhancements. Updated .gitignore to include Thumbs.db and .claude.

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ venv.bak/
 *.swo
 *~
 .DS_Store
+Thumbs.db
+nul
 
 # Testing
 .pytest_cache/
@@ -48,4 +50,5 @@ htmlcov/
 
 # SelfMe specific
 .selfme/
+.claude/
 *.log
