--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ rich = "^13.7.0"
 python-dotenv = "^1.0.0"
 pydantic = "^2.7.0"
 pydantic-settings = "^2.3.0"
+pyperclip = "^1.8.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
