Enhance project setup and dependencies for SelfMe. Updated .gitignore to include frontend build artifacts, added FastAPI and Uvicorn dependencies in pyproject.toml and requirements.txt, and improved documentation for running the Web UI. Included critical frontend build rules in CLAUDE.md to ensure proper deployment practices.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ python-dotenv = "^1.0.0"
 pydantic = "^2.7.0"
 pydantic-settings = "^2.3.0"
 pyperclip = "^1.8.2"
+fastapi = "^0.115.0"
+uvicorn = {extras = ["standard"], version = "^0.32.0"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
@@ -28,6 +30,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 selfme = "selfme.cli:main"
+selfme-web = "selfme.web.app:main"
 
 [tool.ruff]
 line-length = 100
