--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@ __pycache__/
 .Python
 build/
 develop-eggs/
-dist/
 downloads/
 eggs/
 .eggs/
@@ -52,3 +51,15 @@ htmlcov/
 .selfme/
 .claude/
 *.log
+
+# Frontend (Node.js)
+node_modules/
+.pnpm-store/
+pnpm-lock.yaml
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Frontend dev
+.vite/
+.cache/
