--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,20 @@
-textual>=0.52.1
+# SelfMe Dependencies
+# Core dependencies
+textual>=7.5.0
 openai>=1.35.0
 anthropic>=0.28.0
-httpx>=0.27.0,<0.28.0
-rich>=13.7.0
+httpx>=0.27.0
+rich>=14.2.0
 python-dotenv>=1.0.0
 pydantic>=2.7.0
 pydantic-settings>=2.3.0
 pyperclip>=1.8.2
+
+# Web UI
+fastapi>=0.115.0
+uvicorn[standard]>=0.32.0
+
+# Development dependencies (optional)
+# pytest>=8.2.0
+# textual-dev>=1.5.1
+# ruff>=0.4.0
