Refactor SelfMe architecture and enhance CLI commands. Updated project description to reflect the new Gateway architecture, which centralizes LLM interactions. Improved CLI commands for TUI and Web UI, allowing for auto-start of the Gateway and added advanced options for custom configurations. Updated dependencies for websockets and improved documentation for running the application.

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pyperclip>=1.8.2
 # Web UI
 fastapi>=0.115.0
 uvicorn[standard]>=0.32.0
+websockets>=13.0
 
 # Development dependencies (optional)
 # pytest>=8.2.0
