--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pydantic-settings = "^2.3.0"
 pyperclip = "^1.8.2"
 fastapi = "^0.115.0"
 uvicorn = {extras = ["standard"], version = "^0.32.0"}
+websockets = "^13.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
