🔧 chore(package.json): add icon files to distribution
Updated package.json to include additional icon files (icon.png, icon.ico, icon.icns) in the distribution list, ensuring that the desktop application has the necessary resources for proper branding and user interface presentation.

--- a/selfme/desktop/package.json
+++ b/selfme/desktop/package.json
@@ -19,7 +19,10 @@
     "files": [
       "main.js",
       "preload.js",
-      "dist/**/*"
+      "dist/**/*",
+      "icon.png",
+      "icon.ico",
+      "icon.icns"
     ],
     "extraResources": [
       {
